# trl

./: .buildinfo  .gitignore  CMakeLists.txt  Doxyfile  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/algorithms/: lanczos.doctree
.doctrees/backends/: openmp.doctree  sycl.doctree
.doctrees/concepts/: index.doctree
.github/workflows/: ci.yml  doc.yml
_sources/: index.rst.txt
_sources/algorithms/: lanczos.rst.txt
_sources/backends/: openmp.rst.txt
_sources/concepts/: index.rst.txt
algorithms/: lanczos.html
backends/: openmp.html  sycl.html
cmake/: trlConfig.cmake.in
concepts/: index.html
data/: bcsstk25.mtx  bcsstk26.mtx  bcsstm25.mtx  bcsstm26.mtx
docs/: .gitignore  Makefile  README.md  conf.py
docs/algorithms/: lanczos.rst
docs/backends/: sycl.rst
examples/: CMakeLists.txt  diagonal.hh  laplace.cc  laplace.hh
examples/ginkgo/: diagonal.cc  diagonal.hh  evp_base.hh  evp_examples.cc  generalized_fem.cc  generalized_fem.hh  laplace.cc  laplace.hh
examples/openmp/: CMakeLists.txt  csrevp.hh  csrtest.cc  gevp_test.cc  laplace.cc
examples/sycl/: CMakeLists.txt  benchmark.cc  csrevp.hh  csrtest.cc  diagonal.cc  diagonal.hh  evp_base.hh  laplace.cc  laplace.hh
include/trl/: concepts.hh
include/trl/eigensolvers/: lanczos.hh  params.hh  reorthogonalization.hh
include/trl/impl/gingko/: blockmatrix.hh  blockview.hh  matrixblockview.hh  multivector.hh
include/trl/impl/onemath/: blockmatrix.hh  blockview.hh  matrixblockview.hh  multivector.hh
include/trl/impl/openmp/: blockmatrix.hh  blockview.hh  evp_base.hh  matrixblockview.hh  multivector.hh  util.hh
include/trl/impl/sycl/: blockmatrix.hh  blockview.hh  matrixblockview.hh  multivector.hh
tests/: CMakeLists.txt  helpers.hh  test_diagonal_orthonormalize.cc  test_eigenvalue_convergence.cc  test_lanczos_convergence.hh  test_lanczos_extend.cc  test_lanczos_extend.hh
tests/ginkgo/: CMakeLists.txt  ginkgo_test_helper.hh  test_lanczos_convergence.cc  test_lanczos_extend.cc
tests/openmp/: CMakeLists.txt  diagonal.hh  laplace.hh  test_dot.cc  test_helper.hh  test_lanczos_convergence.cc  test_lanczos_extend.cc
tests/sycl/: CMakeLists.txt  test_helper.hh  test_lanczos_convergence.cc  test_lanczos_extend.cc
